# Kek-Mod

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  README.md  SConstruct  SConstruct_config.py.example  pyproject.toml
Assets/Config/: Civ4ShellBackend.xml
Assets/Python/Kek-Mod/: Civ4ShellBackend.py
CvGameCoreDLL/: CyGame.cpp  CyGame.h  CyGameInterface.cpp
credits/: README.md
